/fix: fix carousel overflow and toggle when animating overlay

--- a/src/components/ImageCard/ImageCard.scss
+++ b/src/components/ImageCard/ImageCard.scss
@@ -1,9 +1,14 @@
 .card {
   box-shadow: 12px 12px 20px var(--theme-smoke-down),
     -8px -8px 15px var(--theme-smoke-up);
-  border-radius: var(--br-default);
+  border-radius: variables.$br-default;
+  background-color: transparent;
+  justify-content: center;
+  align-items: center;
   position: relative;
   overflow: hidden;
+  min-width: 500px;
+  display: flex;
 
   &__container {
     justify-content: center;
@@ -20,15 +25,15 @@
       background-color: variables.$dark;
       pointer-events: none;
       position: absolute;
-      height: 100%;
       opacity: 0.5;
+      height: 100%;
       width: 100%;
     }
   }
 
   &__image {
-    object-fit: fill;
-    width: 600px;
+    object-fit: cover;
     height: 100%;
+    width: 100%;
   }
 }
