--- a/src/pages/About/Myself/Myself.scss
+++ b/src/pages/About/Myself/Myself.scss
@@ -11,8 +11,10 @@
   }
 
   &__photo {
+    box-shadow: 12px 12px 20px var(--theme-smoke-down),
+      -8px -8px 15px var(--theme-smoke-up);
     margin-bottom: 1.5rem;
-    border-radius: 10%;
+    border-radius: variables.$br-default;
   }
 
   &__para {
