--- a/src/pages/Certificates/Certificates.scss
+++ b/src/pages/Certificates/Certificates.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: center;
   padding: 3rem 7.5vw;
-  position: relative;
+  overflow: hidden;
   min-height: 80vh;
   display: flex;
   gap: 2rem;
@@ -15,13 +15,9 @@
     font-weight: 900;
   }
 
-  &__container {
-    border-radius: variables.$br-default;
-    background-color: transparent;
-    position: absolute;
+  &__section {
     display: flex;
     gap: 1rem;
-    left: 0;
   }
 
   @include mixins.for-size(tablet) {
